                                                     -*- coding: utf-8 -*-
Changes for APR 1.5.1

  *) Correct a regression in 1.5.0 which affected out-of-tree
     builds on Unix.  [Rainer Jung]

Changes for APR 1.5.0

  *) Fix Linux kernel version check to recognize more versions,
     including versions 3.10 and later.  PR 55690.  [Joe Orton,
     Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>]

  *) Add apr_sockaddr_is_wildcard() to check if a socket address
     refers to the wildcard address for the protocol family (e.g.,
     0.0.0.0/INADDR_ANY for IPv4).  [Jeff Trawick]

  *) apr_file_dup2() on Windows: Fix debug RTL assertion in when 
     attempting to _commit(stdout) or _commit(stderr).  [Mike Rumph
     <mike.rumph oracle.com>]

  *) apr_socket_connect() on Windows: Handle WSAEISCONN.  PR 48736.
     [<inoue ariel-networks.com>, Jeff Trawick]

  *) z/OS: threadsafe apr_pollset_poll support for sockets [Greg Ames]

  *) Windows:  Don't obtain a mutex for buffered file I/O unless the
     file was opened with the APR_FOPEN_XTHREAD flag.  [Ivan Zhakov
     <ivan visualsvn.com>]

  *) Windows:  Create named shared memory segments under the "Local"
     namespace if the caller is unprivileged, fixing an inability of
     unprivileged callers to use apr_shm_create() with named shared
     memory segments under recent Windows.  As before, shared memory
     segments are created under the "Global" namespace for privileged
     callers.  Add apr_shm_create_ex() and apr_shm_attach_ex(), which
     provide the ability to override the normal namespace selection.
     [Jeff Trawick]

  *) Update compile settings for MINT OS.  PR 47181. [Alan Hourihane
     <alanh fairlite.co.uk>]

  *) Files and pipes on Windows:  Don't create an unused pollset when
     files and pipes are opened.  [Mladen Turk]

  *) apr_socket_timeout_set() on Windows: If the socket was in a non-
     blocking state before, disable that setting so that timeouts work.